--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   flutter_email_sender: ^6.0.1
   easy_localization: ^3.0.0
   lottie: ^2.4.0
-
+  flutter_story_view: ^0.0.3
+  flutter_story: ^1.0.1
   transparent_image: ^2.0.0
 #  new_version: ^0.3.1
 #  in_app_update: ^4.1.4
