--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   customizable_multiselect_field:
     path: ./packages/customizable_multiselect_field
-  intl: ^0.19.0
+  intl: ^0.18.0
   socket_io_client: ^1.0.1
   laravel_echo2: ^0.0.1
   url_launcher: ^6.0.12
@@ -47,10 +47,12 @@ dependencies:
   lottie: ^2.4.0
   flutter_story_view: ^0.0.3
   flutter_story: ^1.0.1
+  story_view: ^0.16.5
   transparent_image: ^2.0.0
 #  new_version: ^0.3.1
 #  in_app_update: ^4.1.4
 #  package_info_plus: any
+  like_button: ^2.0.4 # for the like button animations
 
   flutter_bloc: ^8.0.1
   equatable: ^2.0.0
