--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   flutter_story_view: ^0.0.3
   flutter_story: ^1.0.1
   story_view: ^0.16.5
+  camera: ^0.10.0+1
+  flutter_staggered_grid_view: ^0.6.1
+  animations: ^2.0.0
   transparent_image: ^2.0.0
 #  new_version: ^0.3.1
 #  in_app_update: ^4.1.4
