--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   pin_code_fields: ^8.0.1
   dropdown_plus: ^0.0.9
   image_picker: ^1.0.0
+  photo_gallery: ^1.2.0
+  image: ^3.0.1  # or the latest version
   file_picker: ^5.0.1
   flutter_tags: "^1.0.0-nullsafety.1"
   flutter_typeahead: any
@@ -35,6 +37,7 @@ dependencies:
   url_launcher: ^6.0.12
   video_player: ^2.2.6
   photo_view: ^0.14.0
+  video_compress: ^3.1.0 # or the latest version
   sign_in_with_apple: ^5.0.0
   shared_preferences: ^2.0.8
   google_sign_in: ^6.1.4
