--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+   <key>NSMicrophoneUsageDescription</key>
+   <string>We need to access to the microphone to record audio file</string>
 	<key>NSContactsUsageDescription</key>
     <string>We need access to your contacts to display them.</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
@@ -76,6 +78,8 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>beta-reports-active</key>
+	<true/>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 </dict>
 </plist>
