--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,19 @@ dependencies:
   pin_code_fields: ^8.0.1
   dropdown_plus: ^0.0.9
   image_picker: ^1.0.0
+  audioplayers: ^1.0.1
   file_picker: ^5.0.1
   flutter_tags: "^1.0.0-nullsafety.1"
   flutter_typeahead: any
   font_awesome_flutter: ^10.5.0
   customizable_multiselect_field:
     path: ./packages/customizable_multiselect_field
-  intl: ^0.18.0
+  intl: ^0.19.0
+  record: ^4.4.4
   socket_io_client: ^1.0.1
   laravel_echo2: ^0.0.1
   url_launcher: ^6.0.12
+  voice_message_package: ^2.2.1
   video_player: ^2.2.6
   photo_view: ^0.14.0
   sign_in_with_apple: ^5.0.0
